# vibege-runtime

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/vibege-asset/: Cargo.toml
crates/vibege-asset/src/: cache.rs  handle.rs  lib.rs  loader.rs  metadata.rs  package.rs  statistics.rs  types.rs
crates/vibege-audio/: Cargo.toml
crates/vibege-audio/src/: engine.rs  handle.rs  lib.rs  mixer.rs  sound_cache.rs  wav.rs
crates/vibege-config/: Cargo.toml
crates/vibege-config/src/: handle.rs  lib.rs  migration.rs  profile.rs  validation.rs
crates/vibege-config/src/config/: audio.rs  developer.rs  graphics.rs  input.rs  mod.rs
crates/vibege-config/tests/: integration.rs
crates/vibege-core/: Cargo.toml
crates/vibege-core/src/: config.rs  crash.rs  diagnostics.rs  error.rs  event.rs  lib.rs  lifecycle.rs  logging.rs  metrics.rs  services.rs  state_machine.rs
crates/vibege-core/tests/: lifecycle_test.rs
crates/vibege-input/: Cargo.toml
crates/vibege-input/src/: action.rs  context.rs  gamepad.rs  lib.rs  mouse.rs
crates/vibege-ipc/: Cargo.toml
crates/vibege-ipc/src/: lib.rs
crates/vibege-renderer/: Cargo.toml
crates/vibege-renderer/src/: font.rs  lib.rs
crates/vibege-renderer/src/shaders/: shader.wgsl
crates/vibege-runtime-app/: Cargo.toml
crates/vibege-runtime-app/src/: config.rs  main.rs  webui.rs
crates/vibege-runtime-app/src/scene/: manager.rs  mod.rs
crates/vibege-runtime-app/src/scenes/: boot_scene.rs  first_run_scene.rs  game_manager.rs  game_scene.rs  home_scene.rs
crates/vibege-sandbox/: Cargo.toml
crates/vibege-sandbox/src/: lib.rs
crates/vibege-scene/: Cargo.toml
crates/vibege-scene/src/: input_helper.rs  lib.rs  ui_helper.rs
crates/vibege-scene/src/runtime/: context.rs  error.rs  lifecycle.rs  mod.rs  orchestrator.rs  session.rs  state.rs  validator.rs
crates/vibege-scene/src/scene/: kind.rs  manager.rs  message.rs  mod.rs  state.rs  tests.rs
crates/vibege-scene/src/scenes/: boot_scene.rs  error_scene.rs  first_run_scene.rs  game_manager.rs  game_scene.rs  home_scene.rs  library_scene.rs  mod.rs  settings_scene.rs  store_scene.rs
crates/vibege-scene/src/store/: cache.rs  discovery.rs  download.rs  manager.rs  metadata.rs  mod.rs  models.rs  search.rs
crates/vibege-sdk/: Cargo.toml
crates/vibege-sdk/src/: animation.rs  assets.rs  audio.rs  debug.rs  input.rs  lib.rs  math.rs  render.rs  runtime.rs  save.rs  scene.rs  storage.rs  util.rs
crates/vibege-suspension/: Cargo.toml
crates/vibege-suspension/src/: lib.rs
crates/vibege-tray/: Cargo.toml
crates/vibege-tray/src/: lib.rs
crates/vibege-window/: Cargo.toml
crates/vibege-window/src/: display.rs  dpi.rs  lib.rs  overlay.rs
resources/: demo-game.lua  first-run.lua  launcher.lua
resources/ui/: index.html
