[workspace]
resolver = "2"
members = [
    "crates/vibege-core",
    "crates/vibege-window",
    "crates/vibege-input",
    "crates/vibege-renderer",
    "crates/vibege-audio",
    "crates/vibege-suspension",
    "crates/vibege-tray",
    "crates/vibege-config",
    "crates/vibege-scene",
    "crates/vibege-runtime-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/millsydotdev/vibege-runtime"
