[package]
name = "vibege-asset"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Asset & Resource Management System — centralised loading, caching, and lifecycle for all engine assets"

[dependencies]
vibege-core = { path = "../vibege-core" }
tracing = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
