[package]
name = "vibege-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "IPC bridge — runtime to game process communication"

[dependencies]
vibege-core = { path = "../vibege-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
