[package]
name = "vibege-runtime-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "VibeGE Runtime — the native desktop application binary"

[[bin]]
name = "vibege-runtime"
path = "src/main.rs"

[dependencies]
vibege-core = { path = "../vibege-core" }
vibege-input = { path = "../vibege-input" }
vibege-renderer = { path = "../vibege-renderer" }
vibege-audio = { path = "../vibege-audio" }
vibege-suspension = { path = "../vibege-suspension" }
vibege-tray = { path = "../vibege-tray" }
vibege-config = { path = "../vibege-config" }
vibege-scene = { path = "../vibege-scene" }
vibege-asset = { path = "../vibege-asset" }
vibege-window = { path = "../vibege-window" }
vibege-ipc = { path = "../vibege-ipc" }
wry = "0.49"
winit = "0.30"
pollster = "0.4"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
raw-window-handle = "0.6"
