[package]
name = "vibege-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sandbox — OS-level process isolation for game execution"

[dependencies]
vibege-core = { path = "../vibege-core" }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_System_Memory",
]}	

[dev-dependencies]
tempfile = "3"
