[package]
name = "vibege-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VibeGE Scene Manager — stack-based platform navigation, game lifecycle"

[dependencies]
vibege-core = { path = "../vibege-core" }
vibege-renderer = { path = "../vibege-renderer" }
vibege-input = { path = "../vibege-input" }
vibege-audio = { path = "../vibege-audio" }
vibege-asset = { path = "../vibege-asset" }
vibege-config = { path = "../vibege-config" }
vibege-suspension = { path = "../vibege-suspension" }
vibege-sdk = { path = "../vibege-sdk" }
mlua = { version = "0.10", features = ["luau"] }
tracing = "0.1"
serde_json = "1"
dirs = "5"
ureq = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
winit = "0.30"

[dev-dependencies]
pollster = "0.4"
tempfile = "3"
