[package]
name = "vibege-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VibeGE SDK — the official public API for game development. Defines the Lua bindings that the runtime exposes to games."

[dependencies]
vibege-renderer = { path = "../vibege-renderer" }
vibege-input = { path = "../vibege-input" }
vibege-audio = { path = "../vibege-audio" }
mlua = { version = "0.10", features = ["luau"] }
serde_json = "1"
tracing = "0.1"
