[package]
name = "vibege-suspension"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Suspension engine — game state capture, snapshot management, restoration"

[dependencies]
vibege-core = { path = "../vibege-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
