[package]
name = "vibege-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "System tray icon and global hotkey for overlay toggle"

[dependencies]
tracing = "0.1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
