[package]
name = "vibege-window"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Window manager — native window creation, event loop, window modes"

[dependencies]
vibege-core = { path = "../vibege-core" }
winit = "0.30"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
